[gd_scene load_steps=13 format=3 uid="uid://djdokvbtmxqkc"]

[ext_resource type="Script" path="res://scenes/data/subject.gd" id="1_71anw"]
[ext_resource type="Texture2D" uid="uid://ix7nu7ud6nks" path="res://book.svg" id="2_n1fyx"]
[ext_resource type="Texture2D" uid="uid://mywmvr3y7ahy" path="res://pen-nib.svg" id="3_f6h8f"]
[ext_resource type="Texture2D" uid="uid://bitcbwjbsqpxy" path="res://trash-can.svg" id="4_bqt8d"]
[ext_resource type="Theme" uid="uid://ddpx351m2ye8v" path="res://themes/fe_font.tres" id="5_pray3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcyqq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gemd"]
bg_color = Color(0, 0, 0.196078, 0.588235)
corner_radius_top_left = 15
corner_radius_top_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qp1q1"]
bg_color = Color(0, 0, 0.196078, 0.588235)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1woh"]
bg_color = Color(0, 0, 0.196078, 0.588235)
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mc87"]
bg_color = Color(0.0470588, 0.403922, 0.933333, 1)
border_width_bottom = 5
border_color = Color(0.0392157, 0.345098, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r14g5"]
bg_color = Color(0.0470588, 0.403922, 0.933333, 1)
border_width_bottom = 5
border_color = Color(0.0392157, 0.345098, 0.792157, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rn63"]
bg_color = Color(0.862745, 0.207843, 0.270588, 1)
border_width_bottom = 5
border_color = Color(0.733333, 0.176471, 0.231373, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Subject" type="MarginContainer"]
custom_minimum_size = Vector2(420, 220)
offset_right = 420.0
offset_bottom = 287.0
script = ExtResource("1_71anw")

[node name="BackgroundColor" type="Panel" parent="."]
self_modulate = Color(0.403922, 0.427451, 0.470588, 1)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rcyqq")

[node name="Image" type="TextureRect" parent="BackgroundColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="SubjectElements" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OptsContainer" type="MarginContainer" parent="SubjectElements"]
layout_mode = 2
size_flags_vertical = 3

[node name="OptsMargin" type="MarginContainer" parent="SubjectElements/OptsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="FullTitle" type="Label" parent="SubjectElements/OptsContainer/OptsMargin"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_pray3")
theme_override_font_sizes/font_size = 26
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FullTitleBackground" type="Panel" parent="SubjectElements/OptsContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8gemd")

[node name="Title" type="Label" parent="SubjectElements"]
custom_minimum_size = Vector2(420, 220)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_pray3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 81
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 7
visible_ratio = 7.0

[node name="QuestionNumber" type="Label" parent="SubjectElements/Title"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -60.0
offset_right = -13.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("5_pray3")
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundNumber" type="Panel" parent="SubjectElements/Title/QuestionNumber"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -4.0
offset_right = 13.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qp1q1")

[node name="Questions" type="Button" parent="SubjectElements/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -101.0
offset_right = 210.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="FullTitleContainer" type="MarginContainer" parent="SubjectElements"]
layout_mode = 2
size_flags_vertical = 3

[node name="FullTitleMargin" type="MarginContainer" parent="SubjectElements/FullTitleContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="FullTitle" type="Label" parent="SubjectElements/FullTitleContainer/FullTitleMargin"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_pray3")
theme_override_font_sizes/font_size = 26
text = "Add New Subject"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FullTitleBackground" type="Panel" parent="SubjectElements/FullTitleContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_a1woh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Details" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_4mc87")

[node name="Icon" type="TextureRect" parent="HBoxContainer/Details"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n1fyx")
expand_mode = 1

[node name="Edit" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_r14g5")

[node name="Icon" type="TextureRect" parent="HBoxContainer/Edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f6h8f")
expand_mode = 1

[node name="Delete" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_4rn63")

[node name="Icon" type="TextureRect" parent="HBoxContainer/Delete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bqt8d")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="SubjectElements/Title/Questions" to="." method="_on_questions_pressed"]
